# curvedSpaceSim

./: .clang-format  .gitignore  CMakeLists.txt  Changelog.md  Citations.md  Contributors.md  Installation.md  LICENSE  README.md  absorbingSimulation.cpp  annealedCrystallization.cpp  checkThroughVertex.cpp  cleanAnnealedCrystallization.cpp  closedMIPS.cpp  computationalTiming.cpp  curvedSpaceNVTSim.cpp  curvedSpaceSimulation.cpp  diffusiveSPPSimulation.cpp  err_v_complexity.cpp  error_v_complexity.nb  flatSpaceSimulation.cpp  fullStopSimulation.cpp  how_to_run_tests.md  ljFIREAnneals.cpp  ljSimulation.cpp  loadTrajectory.cpp  manyFIREAnneals.cpp  meshTesting.cpp  mpiSimulation.cpp  multirankSimulation.cpp  openMIPS.cpp  reflectingSimulation.cpp  t_v_complexity.cpp  t_v_n.cpp  tangentialSimulation.cpp  testSkeleton.cpp  torusCrystallization.cpp  visualization.cpp
bulk_silos/: R2.000000_silo_areas.csv  clusterSizes_R2_N_124.csv  clusterSizes_R2_N_32.csv  clusterSizes_R2_N_64.csv  silo_omega0.004000_R2.000000_remesh.off  silo_omega0.008000_R2.000000_remesh.off  silo_omega0.016000_R2.000000_remesh.off  silo_omega0.020000_R2.000000_remesh.off  silo_omega0.024000_R2.000000_remesh.off  silo_omega0.028000_R2.000000_remesh.off  silo_omega0.032000_R2.000000_remesh.off  silo_omega0.036000_R2.000000_remesh.off  silo_omega0.040000_R2.000000_remesh.off  silo_omega0.044000_R2.000000_remesh.off  silo_omega0.048000_R2.000000_remesh.off  silo_omega0.052000_R2.000000_remesh.off  silo_omega0.056000_R2.000000_remesh.off  silo_omega0.060000_R2.000000_remesh.off  silo_omega0.064000_R2.000000_remesh.off  silo_omega0.068000_R2.000000_remesh.off  silo_omega0.072000_R2.000000_remesh.off  silo_omega0.076000_R2.000000_remesh.off  silo_omega0.080000_R2.000000_remesh.off  silo_omega0.084000_R2.000000_remesh.off  silo_omega0.088000_R2.000000_remesh.off  silo_omega0.092000_R2.000000_remesh.off  silo_omega0.096000_R2.000000_remesh.off  silo_omega0.100000_R2.000000_remesh.off  silo_omega0.104000_R2.000000_remesh.off  silo_omega0.108000_R2.000000_remesh.off  silo_omega0.112000_R2.000000_remesh.off  silo_omega0.116000_R2.000000_remesh.off  silo_omega0.120000_R2.000000_remesh.off  silo_omega0.124000_R2.000000_remesh.off  silo_omega0.128000_R2.000000_remesh.off  silo_omega0.132000_R2.000000_remesh.off  silo_omega0.136000_R2.000000_remesh.off  silo_omega0.140000_R2.000000_remesh.off  silo_omega0.144000_R2.000000_remesh.off  silo_omega0.148000_R2.000000_remesh.off  (+43 more)
doc/: BasicInformation.md  sampleCode.md  simulationCookbook.md
err_v_c_meshes/: sphere_mesh_1.off  sphere_mesh_10.off  sphere_mesh_11.off  sphere_mesh_12.off  sphere_mesh_2.off  sphere_mesh_3.off  sphere_mesh_4.off  sphere_mesh_5.off  sphere_mesh_7.off  sphere_mesh_8.off  sphere_mesh_9.off  torus_remesh_1.off  torus_remesh_10.off  torus_remesh_11.off  torus_remesh_12.off  torus_remesh_14.off  torus_remesh_2.off  torus_remesh_3.off  torus_remesh_5.off  torus_remesh_6.off  torus_remesh_7.off  torus_remesh_9.off
exampleMeshes/: ar01_torusrb5_remesh.off  ar07_torusrb30_remesh.off  ar1.2_torusrb12.off  ar15_torusrb40_remesh.off  ar30_torusrb120_remesh.off  ar3_torusrb10.off  ar3_torusrb15.off  big_torusrb100.off  big_torusrb20.off  big_torusrb50.off  deformed_sphere.off  silo_omega0.012_R2.0.off  silo_rb10_remesh.off  sp_rb20_isotropic.off  (+15 more)
src/databases/: CMakeLists.txt  DatabaseNetCDF.cpp  DatabaseNetCDF.h  baseDatabase.h  baseHDF5Database.cpp  baseHDF5Database.h  simpleModelDatabase.cpp  simpleModelDatabase.h  vectorValueDatabase.cpp  vectorValueDatabase.h
src/models/: CMakeLists.txt  absorbingOpenMeshSpace.cpp  absorbingOpenMeshSpace.h  baseSpace.h  closedMeshSpace.h  euclideanSpace.cpp  euclideanSpace.h  fullStopMeshSpace.cpp  fullStopMeshSpace.h  geometryCentralMeshSpace.cpp  geometryCentralMeshSpace.h  mpiModel.cpp  mpiModel.h  openMeshSpace.cpp  openMeshSpace.h  origTriangulatedMeshSpace.cpp  otherShiftFunctions.cpp  reflectingOpenMeshSpace.cpp  reflectingOpenMeshSpace.h  simpleModel.cpp  simpleModel.h  tangentialMeshSpace.cpp  tangentialMeshSpace.h  tangentialOpenMeshSpace.cpp  tangentialOpenMeshSpace.h  triangulatedMeshSpace.cpp  triangulatedMeshSpace.h
src/updaters/: CMakeLists.txt  baseUpdater.cpp  baseUpdater.h  brownianMotion.cpp  brownianMotion.h  diffusiveSPP.cpp  diffusiveSPP.h  fireMinimization.cpp  fireMinimization.h  gradientDescent.cpp  gradientDescent.h  noInteractionNVT.cpp  noInteractionNVT.h  noseHooverNVT.cpp  noseHooverNVT.h  velocityVerletNVE.cpp  velocityVerletNVE.h
src/utility/: CMakeLists.txt  \  baseNeighborStructure.cpp  baseNeighborStructure.h  cellListNeighborStructure.cpp  cellListNeighborStructure.h  functionUtilities.cpp  functionUtilities.h  hyperRectangularCellList.cpp  hyperRectangularCellList.h  indexer.h  meshUtilities.cpp  meshUtilities.h  noiseSource.cpp  noiseSource.h  profiler.h  submesher.cpp  submesher.h
(+130 files in other folders)
